--- a/public/join/join.css
+++ b/public/join/join.css
@@ -9,6 +9,7 @@ body {
   padding: 12px;
   display: flex;
   justify-content: space-between;
+  border-bottom: 10px solid #ada1ff;
 }
 
 #name-field-outer {
@@ -17,6 +18,10 @@ body {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 20px;
+  background-color: #806cff;
 }
 
 #name-field-inner {
@@ -27,6 +32,7 @@ body {
   color: #ffffff;
   font-family: "Trebuchet MS", sans-serif;
   font-weight: bold;
+  font-size: larger;
 }
 
 #points {
@@ -56,22 +62,22 @@ select:focus {
 }
 
 #name-input-field {
-  border: none;
-  border-bottom: 2px dotted black;
+  border-radius: 5px;
+  border: 2px solid black;
   font-family: "Trebuchet MS", sans-serif;
   font-weight: bold;
   height: 25px;
   font-size: 20px;
-  color: #6cd9f9;
+  color: black;
 }
 
 #name-submit {
   font-family: "Trebuchet MS", sans-serif;
+  border: 2px solid black;
   background-color: #ff6363;
+  border-radius: 5px;
   color: #ffffff;
-  height: 35px;
-  width: 60px;
-  border: none;
-  font-size: 20px;
+  height: 30px;
+  font-size: 18px;
   font-weight: bold;
 }
